Scrollbar fix

--- a/frontend/static/frontend/style.css
+++ b/frontend/static/frontend/style.css
@@ -2,9 +2,7 @@
 body {
   font-family: Electrolize, sans-serif;
   background-color: #000;
-  color: white; }
-
-html {
+  color: white;
   overflow-y: scroll; }
 
 .top-margin {
